updated images and videos

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <main>
       <h1>Discover hidden places in the world around you</h1>
       <a href="#">Download Excursion (Coming soon!)</a>
-      <video src="#">Your browser doesnt support the video</video>
+      <video class="phone-vid" src="./resources/excursion.mp4" autoplay>Your browser doesnt support the video</video>
       <h2>Your personal travel guide</h2>
       <p>
         Excursion remembers places you like, and recommends new points of
         interest around you.
       </p>
-      <img src="#" alt="a tent" />
-      <img src="#" alt="cellphone" />
+      <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="a tent" />
+      <img class="cellphone" src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png" alt="cellphone" />
       <h2>Coming Soon for iPhone and Android</h2>
       <a href="#">Download Excursion (Coming soon!)</a>
     </main>
